--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
@@ -57,9 +57,9 @@
                     <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
                 </svg>  -->
                 <div class="container"> 
-                    <div class="carousel-caption text-start"> 
+                    <div class="carousel-caption"> 
                         <h1>Хазартно право</h1>
-                        <p>Насочени сме изцяло към хазартното право и регулацията на хазартната дейност в България, като предоставяме професионални решения, базирани на доказан опит и специализация.</p> 
+                        <p class="blur">Насочени сме изцяло към хазартното право и регулацията на хазартната дейност в България, като предоставяме професионални решения, базирани на доказан опит и специализация.</p> 
                         <!-- <p class="opacity-75">Хазартно право.</p>  -->
                         <p>
                             <a class="btn btn-lg btn-primary" href="#">Хазартно право</a>
