--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Кирил Груйчев</title>
 </head>
 
@@ -24,10 +25,10 @@
                         <a class="nav-link" aria-current="page" href="#">ЗА НАС</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">НОВИНИ И ПУБЛИКАЦИИ</a>
+                        <a class="nav-link" href="news.html">НОВИНИ И ПУБЛИКАЦИИ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">ЕКИП</a>
+                        <a class="nav-link" href="aboutUs.html">ЕКИП</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -46,12 +47,12 @@
 
     <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel"> 
         <div class="carousel-indicators"> 
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button> 
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1"></button> 
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button> 
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button> 
+            <!-- <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>  -->
         </div> 
         <div class="carousel-inner"> 
-            <div class="carousel-item"> 
+            <div class="carousel-item active"> 
                 <img src="img/frontPage.png" alt="Front page image" class="d-block w-100">
                 <!-- <svg aria-hidden="true" class="bd-placeholder-img " height="100%" preserveAspectRatio="xMidYMid slice" width="100%" xmlns="http://www.w3.org/2000/svg">
                     <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
@@ -82,11 +83,8 @@
                     </div> 
                 </div> 
             </div> 
-            <div class="carousel-item active"> 
+            <!-- <div class="carousel-item active"> 
                 <img src="img/frontPage.png" alt="Front page image" class="d-block w-100">
-                <!-- <svg aria-hidden="true" class="bd-placeholder-img " height="100%" preserveAspectRatio="xMidYMid slice" width="100%" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                </svg>  -->
                 <div class="container"> 
                     <div class="carousel-caption text-end"> 
                         <h1>One more for good measure.</h1> 
@@ -96,7 +94,7 @@
                         </p> 
                     </div> 
                 </div> 
-            </div> 
+            </div>  -->
         </div> 
         <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev"> 
             <span class="carousel-control-prev-icon" aria-hidden="true"></span> 
