--- a/crew.html
+++ b/crew.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
-    <link rel="stylesheet" href="css/news.css">
+    <link rel="stylesheet" href="css/crew.css">
     <title>Кирил Груйчев</title>
 </head>
 
@@ -46,44 +46,29 @@
 
 
 
-    <div class="container my-5">
-        <h2 class="mb-4">Новини и публикации</h2>
-        <div class="row g-4">
-            <div class="col-md-4">
-                <div class="card h-100 shadow-sm">
-                    <img src="img/news.jpg" class="card-img-top" alt="Новина">
-                    <div class="card-body">
-                        <small>05 август 2025</small>
-                        <h3 class="card-title">Нов регламент относно AML</h3>
-                        <p class="card-text">Европейската комисия прие нова рамка за борба с прането на пари, която ще засегне хазартната индустрия в България. Новият регламент изисква по-строг контрол над идентификацията на клиентите.</p>
-                    </div>
-                    <!-- <div class="card-footer bg-transparent">
-                        <a href="#" class="btn btn-primary">Прочетете повече</a>
-                    </div> -->
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card h-100 shadow-sm">
-                    <img src="img/news1.jpg" class="card-img-top" alt="Новина">
-                    <div class="card-body">
-                        <small>29 юли 2025</small>
-                        <h3 class="card-title">Промени в Закона за хазарта</h3>
-                        <p class="card-text">Нашата кантора предлага нови услуги за корпоративни клиенти, включително правен одит, изготвяне на договори и съдебна защита при спорове.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card h-100 shadow-sm">
-                    <img src="img/news1.jpg" class="card-img-top" alt="Новина">
-                    <div class="card-body">
-                        <small>18 юли 2025</small>
-                        <h3 class="card-title">Нови възможности за корпоративни клиенти</h3>
-                        <p class="card-text">Нашата кантора предлага нови услуги за корпоративни клиенти, включително правен одит, изготвяне на договори и съдебна защита при спорове.</p>
-                    </div>
-                </div>
+    <section class="team-hero position-relative">
+        <img src="img/newCrew1.jpg" class="img-fluid w-100 hero-img" alt="Нашият екип">
+        <div class="hero-overlay d-flex justify-content-center align-items-center">
+            <h1 class="text-white fw-bold display-4">Нашият Екип</h1>
+        </div>
+    </section>
+
+    <section class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <h2 class="mb-3 text-center">Кои сме ние</h2>
+                <p class="lead text-right">
+                    В основата на нашата кантора стои екип, за който прецизността е принцип, а дискретността - стандарт.<br>
+                    Обединяваме опит, визия и стратегическо мислене, за да създаваме решения, които надхвърлят очакванията.<br><br>
+
+                    Нашата сила е в синергията - между юристи, които споделят еднакъв усет към детайла и отговорност към резултата.<br>
+                    Работим тихо, целенасочено и с разбиране за стойността на доверието.<br><br>
+
+                    Всяка задача е подход, всеки клиент - партньорство. Нашият екип не просто прилага закона - ние го моделираме спрямо визията и интереса на клиента. Това е почеркът, по който ни разпознават: елегантност в израза, дълбочина в анализа, сигурност в резултата.
+                </p>
             </div>
         </div>
-    </div>
+    </section>
 
 
 
