--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">ЗА НАС</a>
+                        <a class="nav-link" aria-current="page" href="aboutUs.html">ЗА НАС</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="news.html">НОВИНИ И ПУБЛИКАЦИИ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="aboutUs.html">ЕКИП</a>
+                        <a class="nav-link" href="crew.html">ЕКИП</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
